# jellyfin-music-player-qt

./: .gitignore  albumlistingwidget.py  dependencies.md  internationalization.py  libviewhomewidget.py  libviewmainwidget.py  libviewwidget.py  loginform.py  main.py  mainwidget.py  mediacontroller.py  pixmapFromHttp.py  placeholderwidget.py  playerwidget.py  popupmessage.py  pyproject.toml  sessioncontroller.py  sessioncontroller_old.py  settings.py  settings.yml
themes/: dark_amber.xml  dark_blue.xml  dark_cyan.xml  dark_lightgreen.xml  dark_medical.xml  dark_pink.xml  dark_red.xml  dark_teal.xml  dark_yellow.xml
